--- a/index.html
+++ b/index.html
@@ -416,6 +416,36 @@ Expected: a number please,
 <p>If <code>failure_callback</code> returns <code>false</code>, the method that the contract is guarding will not be called (the default behaviour).</p>
 
 <h2>
+<a name="method-overloading" class="anchor" href="#method-overloading"><span class="octicon octicon-link"></span></a>Method overloading</h2>
+
+<p>You can use contracts for method overloading! For example, here's a factorial function without method overloading:</p>
+
+<pre><code>Contract Num =&gt; Num
+def fact x
+  if x == 1
+    x
+  else
+    x * fact(x - 1)
+  end
+end
+</code></pre>
+
+<p>Here it is again, re-written with method overloading:</p>
+
+<pre><code>Contract 1 =&gt; 1
+def fact x
+  x
+end
+
+Contract Num =&gt; Num
+def fact x
+  x * fact(x - 1)
+end
+</code></pre>
+
+<p>For an argument, each function will be tried in order. The first function that doesn't raise a <code>ContractError</code> will be used. So in this case, if x == 1, the first function will be used. For all other values, the second function will be used.</p>
+
+<h2>
 <a name="misc" class="anchor" href="#misc"><span class="octicon octicon-link"></span></a>Misc</h2>
 
 <p>Please submit any bugs <a href="https://github.com/egonSchiele/contracts.ruby/issues">here</a> and I'll try to get them resolved ASAP!</p>
