Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ By default, an exception is thrown when a contract fails. This can be changed to
   puts <span class="pl-s1"><span class="pl-pds">"</span>hello, <span class="pl-pse">#{</span><span class="pl-s2">name</span><span class="pl-pse"><span class="pl-s2">}</span></span>!<span class="pl-pds">"</span></span>
 <span class="pl-k">end</span></pre></div>
 
-<p>You always need to specify a contract for the return value. In this example, <code>hello</code> doesn't return anything, so the contract is <code>nil</code>. Now you know that you can use a constant like <code>nil</code> as the of a contract. Valid values for a contract are:</p>
+<p>You always need to specify a contract for the return value. In this example, <code>hello</code> doesn't return anything, so the contract is <code>nil</code>. Now you know that you can use a constant like <code>nil</code> as the end of a contract. Valid values for a contract are:</p>
 
 <ul>
 <li>the name of a class (like <code>String</code> or <code>Fixnum</code>)</li>
