Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Contracts.ruby by egonSchiele</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
